--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -10,33 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/app_background"
-        android:textColor="@color/black"
+        app:backgroundTint="@color/app_background"
         >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Settings"
-            android:layout_marginLeft="@dimen/main_screen_sidemargin"
-            android:layout_marginRight="@dimen/main_screen_sidemargin"
-            android:layout_marginTop="20dp"
-            android:textSize="15sp"
-            android:visibility="invisible"
-            />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:id="@+id/lLayoutControls"
+                android:id="@+id/lTopLayout_row1"
                 android:layout_marginLeft="@dimen/main_screen_sidemargin"
                 android:layout_marginRight="@dimen/main_screen_sidemargin"
+                android:layout_marginTop="@dimen/button_margin_10dp"
+
                 >
 
                 <TextView
@@ -44,10 +35,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="end|center_vertical"
+                    android:gravity="center_vertical"
                     android:text="System Temp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:textColor="@color/dark_gray"
+                    />
 
                 <TextView
                     android:layout_width="0dp"
@@ -60,13 +52,6 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
-                    android:textSize="@dimen/button_text_size" />
 
             </LinearLayout>
 
@@ -78,6 +63,7 @@
                 android:layout_marginRight="@dimen/main_screen_sidemargin"
                 android:layout_marginTop="20dp"
                 android:baselineAligned="false"
+                android:layout_below="@id/lTopLayout_row1"
                 >
 
 
@@ -86,32 +72,25 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="right|center_vertical"
-                    android:text="Blower on"
-                    android:textSize="@dimen/button_text_size"
-                    android:textColor="@color/black"/>
+                    android:gravity="center_vertical"
+                    android:text="Blower on (° C)"
+                    android:textColor="@color/dark_gray"
+                    />
 
                 <EditText
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="45"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:textSize="@dimen/button_text_size"
-                    android:gravity="center"
                     android:layout_weight="@dimen/settings_pg_value_width"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/black"
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline"
+                    android:textColorHint="@color/dark_gray"
                     />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
-                    android:text="° C"
-                    android:textSize="@dimen/button_text_size" />
 
             </LinearLayout>
 
@@ -131,30 +110,25 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="end|center_vertical"
-                    android:text="Blower off"
-                    android:textSize="@dimen/button_text_size" />
+                    android:gravity="center_vertical"
+                    android:text="Blower off (° C)"
+                    android:textColor="@color/dark_gray"
+                    />
 
                 <EditText
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="42"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:textSize="@dimen/button_text_size"
-                    android:gravity="center"
                     android:layout_weight="@dimen/settings_pg_value_width"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:textSize="13sp"
+                    android:textColor="@color/black"
+                    android:theme="@style/EditTextGrayUnderline"
+                    android:textColorHint="@color/dark_gray"
                     />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
-                    android:text="° C"
-                    android:textSize="@dimen/button_text_size" />
 
             </LinearLayout>
 
@@ -174,27 +148,22 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="end|center_vertical"
-                    android:text="Blower installed"
-                    android:textSize="@dimen/button_text_size" />
+                    android:gravity="center_vertical"
+                    android:text="Blower NOT installed"
+                    android:textColor="@color/dark_gray"
+                    />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_value_width"
-                    android:gravity="center"
                     android:text="NO"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="13sp"
+                    android:visibility="invisible"
+                    />
 
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
-                    android:textSize="@dimen/button_text_size" />
 
 
             </LinearLayout>
@@ -206,7 +175,7 @@
                 android:layout_marginLeft="@dimen/main_screen_sidemargin"
                 android:layout_marginRight="@dimen/main_screen_sidemargin"
                 android:layout_below="@+id/lLayoutMID"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:baselineAligned="false"
                 >
 
@@ -215,9 +184,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="end|center_vertical"
-                    android:text="TL84 delay"
-                    android:textSize="@dimen/button_text_size" />
+                    android:gravity="center_vertical"
+                    android:text="TL84 delay (ms)"
+                    android:textColor="@color/dark_gray"
+                    />
 
                 <EditText
                     android:id="@+id/edit_TL84_delay"
@@ -226,23 +196,17 @@
                     android:text=""
                     android:hint="100 - 1200"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:textSize="@dimen/button_text_size"
-                    android:gravity="center"
                     android:layout_weight="@dimen/settings_pg_value_width"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:digits="0123456789"
                     android:inputType="numberDecimal"
+                    android:textSize="13sp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/dark_gray"
+                    android:theme="@style/EditTextGrayUnderline"
                     />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.14"
-                    android:gravity="center"
-                    android:text="ms"
-                    android:textSize="@dimen/button_text_size" />
 
             </LinearLayout>
 
@@ -262,59 +226,25 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_label_width"
-                    android:gravity="end|center_vertical"
-                    android:text="Auto shut off"
-                    android:textSize="@dimen/button_text_size" />
-
-                <EditText
-                    android:id="@+id/editAutoShutOFF_h"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_marginEnd="0dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:inputType="number"
-                    android:tooltipText="hh"
-                    android:textSize="@dimen/button_text_size"
-                    android:nextFocusForward="@+id/editAutoShutOFF_m"
+                    android:gravity="center_vertical"
+                    android:text="Auto shut off (mins)"
+                    android:textColor="@color/dark_gray"
                     />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_marginEnd="1dp"
-                    android:layout_marginStart="1dp"
-                    android:layout_weight="0.06"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:text=":"
-                    android:textSize="@dimen/button_text_size" />
 
                 <EditText
                     android:id="@+id/editAutoShutOFF_m"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.16"
-                    android:gravity="center"
+                    android:layout_weight="@dimen/settings_pg_value_width"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:inputType="number"
-                    android:tooltipText="mm"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline"
+                    android:textColorHint="@color/dark_gray"
+                    />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="0.14"
-                    android:gravity="center"
-                    android:text="h"
-                    android:textSize="@dimen/button_text_size" />
 
             </LinearLayout>
 
